--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#393838</color>
+    <color name="nav_bar_color">#393838</color>
+    <color name="red">#FF1100</color>
+    <color name="text_color">@color/white</color>
 </resources>
