--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -1,15 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.ArticleDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        >
+
+        <ImageView
+            android:id="@+id/article_img"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/article_title_tv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="8dp"
+            android:textColor="@color/text_color"
+            android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@id/article_img"
+            tools:text="This is a test Title" />
+
+        <TextView
+            android:id="@+id/source_tv"
+            android:layout_width="0dp"
+            android:textSize="18sp"
+            android:padding="8dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/article_title_tv"
+            tools:text="BBC News"
+            />
+
+        <TextView
+            android:id="@+id/date_tv"
+            android:layout_width="0dp"
+            android:padding="8dp"
+            android:gravity="end"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/source_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/article_title_tv"
+            tools:text="BBC News"
+            />
+
+        <TextView
+            android:id="@+id/article_content_tv"
+            android:textColor="@color/text_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@id/source_tv"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/go_article_btn"
+            android:text="Go to ful article"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/article_content_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="12dp"
+            />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/share_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/share_ic"
+            app:layout_constraintBottom_toBottomOf="@id/article_img"
+            app:layout_constraintEnd_toEndOf="@id/article_img"
+            android:layout_margin="8dp"
+            />
 
 
-</FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
