--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_primary">#FFFFFFFF</color>
+    <color name="nav_bar_color">#FFFFFFFF</color>
+    <color name="red">#FF1100</color>
+    <color name="text_color">@color/black</color>
 </resources>
