--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.DiscoverFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <com.google.android.material.card.MaterialCardView
+       android:id="@+id/search_view"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toTopOf="parent"
+       app:cardCornerRadius="18dp"
+       app:cardElevation="12dp"
+       android:layout_margin="16dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       >
+       <TextView
+           android:text="Search Article"
+           android:padding="12dp"
+           android:textSize="18sp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:drawablePadding="8dp"
+           app:drawableStartCompat="@drawable/search_ic" />
+   </com.google.android.material.card.MaterialCardView>
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
