--- a/app/src/main/res/layout/article_simple_list_item.xml
+++ b/app/src/main/res/layout/article_simple_list_item.xml
@@ -29,7 +29,7 @@
     <TextView
         android:id="@+id/article_title_tv"
         tools:text="This is a test Title"
-        android:textColor="@color/text_color"
+        android:textColor="@color/colorOnBackground"
         android:textSize="16sp"
         android:padding="8dp"
         android:layout_width="0dp"
