--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -34,16 +34,28 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/day_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/articles_rec"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_marginTop="8dp"
-            tools:listitem="@layout/top_headlines_parent_item"
-            />
+            >
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/top_headlines_parent_tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tabMode="scrollable"
+                />
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/top_headlines_parent_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/top_headlines_parent_tab_layout"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
