--- a/app/src/main/res/layout/top_headlines_parent_item.xml
+++ b/app/src/main/res/layout/top_headlines_parent_item.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tint="@color/colorOnBackground"
+        tools:src="@drawable/top_headlines_ic"
+        />
     <TextView
         android:id="@+id/category_name"
         tools:text="Top in Tech"
-        android:textColor="@color/text_color"
+        android:textColor="@color/colorOnBackground"
         android:textSize="24sp"
         android:padding="8dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/icon"
+        app:layout_constraintBottom_toBottomOf="@id/icon"
+        app:layout_constraintStart_toEndOf="@id/icon"
         />
 
     <androidx.recyclerview.widget.RecyclerView
