--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="nav_bar_color">#FFFFFFFF</color>
-    <color name="red">#FF1100</color>
+
+    <color name="red">#F43123</color>
+    <color name="green">#1CB502</color>
+    <color name="yellow">#CD9A02</color>
+    <color name="gray">#333333</color>
+    <color name="blue">#009688</color>
     <color name="colorOnBackground">@color/black</color>
 </resources>
