- Some edits on MainFragment.kt

--- a/app/src/main/res/layout/top_headlines_parent_item.xml
+++ b/app/src/main/res/layout/top_headlines_parent_item.xml
@@ -38,4 +38,15 @@
         tools:listitem="@layout/top_headlines_card_list_item"
         />
 
+    <TextView
+        android:id="@+id/no_articles_tv"
+        android:text="No articles found.\nSwipe down to refresh for new articles"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
