--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -25,6 +25,8 @@
         app:layout_constraintTop_toBottomOf="@id/country_text"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp"
+        android:padding="8dp"
+
         />
 
     <View
@@ -53,6 +55,36 @@
         app:layout_constraintTop_toBottomOf="@id/language_text"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp"
+        android:padding="8dp"
+        />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        app:layout_constraintTop_toBottomOf="@id/languages_spinner"
+        android:background="@color/colorOnBackground"
+        android:layout_marginTop="16dp"
+        />
+    <TextView
+        android:id="@+id/theme_text"
+        android:text="App Theme"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <Spinner
+        android:id="@+id/theme_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/theme_text"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        android:padding="8dp"
         />
 
 
